Added bean validation

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <java-api.version>1.8</java-api.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <tomee.version>7.0.0-SNAPSHOT</tomee.version>
+        <tomee.version>7.0.0-M2</tomee.version>
     </properties>
 
     <name>TomEE 7.0 JAX-RS Test</name>
